Fix dark mode band css to be overridable

--- a/src/css/dark-mode.css
+++ b/src/css/dark-mode.css
@@ -4,12 +4,26 @@
 
 /*------------------- Bands ----------------*/
 
-  .timeline-band-0 .timeline-ether-bg{background-color:#555555}
-  .timeline-band-1 .timeline-ether-bg{background-color:#444444}
-  .timeline-band-2 .timeline-ether-bg{background-color:#303030}
-  .timeline-band-3 .timeline-ether-bg{background-color:#2a2a2a}
-  .timeline-band-4 .timeline-ether-bg{background-color:#1e1e1e}
-          
+  .timeline-band-0 .timeline-ether-bg {
+      background-color: var(--timeline-band-background-color, #555555);
+  }
+
+  .timeline-band-1 .timeline-ether-bg {
+      background-color: var(--timeline-band-background-color, #444444);
+  }
+
+  .timeline-band-2 .timeline-ether-bg {
+      background-color: var(--timeline-band-background-color, #303030);
+  }
+
+  .timeline-band-3 .timeline-ether-bg {
+      background-color: var(--timeline-band-background-color, #2a2a2a);
+  }
+
+  .timeline-band-4 .timeline-ether-bg {
+      background-color: var(--timeline-band-background-color, #1e1e1e);
+  }
+  
   .timeline-ether-highlight {
     background-color: rgba(255, 255, 255, 0.25);
   }
